--- a/index.html
+++ b/index.html
@@ -402,28 +402,28 @@
         </div>
         <div class="social-media-container">
           <p class="social-text">Social media</p>
-          <ul class="social-list">
+          <ul class="social-list footer-social-list">
             <li class="social-list-item">
-              <a class="footer-social-link" href="https://www.instagram.com/"
-                ><svg class="link-svg" width="16" height="16">
+              <a class="footer-social-link" href="https://www.instagram.com/">
+                <svg class="link-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use></svg
               ></a>
             </li>
             <li class="social-list-item">
               <a class="footer-social-link" href="https://twitter.com/"
-                ><svg class="link-svg" width="16" height="16">
+                ><svg class="link-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use></svg
               ></a>
             </li>
             <li class="social-list-item">
               <a class="footer-social-link" href="https://www.facebook.com/"
-                ><svg class="link-svg" width="16" height="16">
+                ><svg class="link-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use></svg
               ></a>
             </li>
             <li class="social-list-item">
-              <a class="footer-social-link" href="https://www.linkedin.com/"
-                ><svg class="link-svg" width="16" height="16">
+              <a class="footer-social-link" href="https://www.linkedin.com/">
+                <svg class="link-svg" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use></svg
               ></a>
             </li>
