--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
           <h2 class="visually-hidden">Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-list-item">
+              <div class="benefits-icon-container">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="benefits-item-title">Strategy</h3>
               <p class="benefits-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -73,6 +78,11 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <div class="benefits-icon-container">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="benefits-item-title">Punctuality</h3>
               <p class="benefits-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -80,6 +90,11 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <div class="benefits-icon-container">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="benefits-item-title">Diligence</h3>
               <p class="benefits-item-text">
                 Research and confirm brands that present the strongest digital
@@ -87,6 +102,11 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <div class="benefits-icon-container">
+                <svg class="benefits-icon" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefits-item-title">Technologies</h3>
               <p class="benefits-item-text">
                 Design practice focused on digital experiences. We bring forth a
