--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
     </main>
     <!-- #region footer -->
     <footer class="page-footer">
-      <div class="footer-container">
+      <div class="footer-container container">
         <div class="logo-container">
           <a class="logo footer-logo" href="./index.html"
             >Web<span class="logo-part">Studio</span></a
@@ -468,5 +468,84 @@
       </div>
     </footer>
     <!-- #endregion footer -->
+
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button type="button" class="modal-close-btn">
+          <svg class="close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-black"></use>
+          </svg>
+        </button>
+        <form
+          class="modal-form"
+          name="modal-window"
+          autocomplete="off"
+          novalidate
+        >
+          <h3 class="modal-heading">
+            Leave your contacts and we will call you back
+          </h3>
+          <label class="modal-form-label" for="username">Name</label>
+          <input
+            class="modal-form-input"
+            type="text"
+            name="username"
+            id="username"
+          />
+
+          <label class="modal-form-label" for="username-tel">Phone</label>
+          <input
+            class="modal-form-input"
+            type="tel"
+            name="username-tel"
+            id="username-tel"
+          />
+
+          <label class="modal-form-label" for="username-email">Email</label>
+          <input
+            class="modal-form-input"
+            type="email"
+            name="username-email"
+            id="username-email"
+          />
+
+          <label class="modal-form-label" for="textarea">Comment</label>
+          <textarea
+            class="modal-form-textarea"
+            placeholder="Text input"
+            name="textarea"
+            id="textarea"
+          >
+          </textarea>
+          <div class="modal-chbx">
+            <input
+              class="checkbox"
+              type="checkbox"
+              name="user-privacy"
+              id="user-checkbox"
+            />
+            <label class="chbx-label" for="user-checkbox">
+              <span class="custom-checkbox">
+                <svg class="checkbox-svg" width="10" height="8">
+                  <use href="./images/icons.svg#icon-gall"></use>
+                </svg>
+              </span>
+              <p class="policy-text">
+                I accept the terms and conditions of the
+                <a
+                  class="policy-text-link"
+                  href="#"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Privacy Policy</a
+                >
+              </p>
+            </label>
+          </div>
+
+          <button class="modal-btn" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
