--- a/index.html
+++ b/index.html
@@ -465,6 +465,23 @@
             </li>
           </ul>
         </div>
+        <div class="footer-cont-subscribe">
+          <p class="subscribe-text">Subscribe</p>
+          <form class="subscribe-form">
+            <label class="subscribe-label"
+              ><input
+                class="subscribe-input"
+                type="email"
+                name="footer-email"
+                placeholder="E-mail"
+            /></label>
+            <button class="subscribe-btn-submit" type="submit">
+              Subscribe<svg class="footer-btn-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <!-- #endregion footer -->
@@ -476,6 +493,7 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
+
         <form
           class="modal-form"
           name="modal-window"
