--- a/index.html
+++ b/index.html
@@ -493,72 +493,81 @@
             <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
-
+        <p class="modal-text">Leave your contacts and we will call you back</p>
         <form
           class="modal-form"
           name="modal-window"
           autocomplete="off"
           novalidate
         >
-          <h3 class="modal-heading">
-            Leave your contacts and we will call you back
-          </h3>
-          <label class="modal-form-label" for="username">Name</label>
-          <input
-            class="modal-form-input"
-            type="text"
-            name="username"
-            id="username"
-          />
+          <div class="form-wrapper-cont">
+            <label class="modal-form-label" for="user-name">Name</label>
+            <div class="modal-cont-input">
+              <input
+                class="modal-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+                required
+              /><svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
 
-          <label class="modal-form-label" for="username-tel">Phone</label>
-          <input
-            class="modal-form-input"
-            type="tel"
-            name="username-tel"
-            id="username-tel"
-          />
-
-          <label class="modal-form-label" for="username-email">Email</label>
-          <input
-            class="modal-form-input"
-            type="email"
-            name="username-email"
-            id="username-email"
-          />
-
-          <label class="modal-form-label" for="textarea">Comment</label>
-          <textarea
-            class="modal-form-textarea"
-            placeholder="Text input"
-            name="textarea"
-            id="textarea"
-          >
-          </textarea>
-          <div class="modal-chbx">
+          <div class="form-wrapper-cont">
+            <label class="modal-form-label" for="user-phone">Phone</label>
+            <div class="modal-cont-input">
+              <input
+                class="modal-input"
+                type="tel"
+                name="user-phone"
+                id="user-phone"
+                required
+              /><svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-wrapper-cont">
+            <label class="modal-form-label" for="user-email">Email</label>
+            <div class="modal-cont-input">
+              <input
+                class="modal-input"
+                type="email"
+                name="user-email"
+                id="user-email"
+                required
+              /><svg class="modal-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-black"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="form-wrapper-cont-content">
+            <label class="modal-form-label" for="user-comment">Comment</label>
+            <textarea
+              class="textarea"
+              name="user-comment"
+              id="user-comment"
+              rows="10"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="modal-cont-checkbox">
             <input
-              class="checkbox"
-              type="checkbox"
               name="user-privacy"
-              id="user-checkbox"
+              type="checkbox"
+              id="user-privacy"
+              value="true"
+              class="checkbox visually-hidden"
             />
-            <label class="chbx-label" for="user-checkbox">
-              <span class="custom-checkbox">
-                <svg class="checkbox-svg" width="10" height="8">
-                  <use href="./images/icons.svg#icon-gall"></use>
-                </svg>
-              </span>
-              <p class="policy-text">
-                I accept the terms and conditions of the
-                <a
-                  class="policy-text-link"
-                  href="#"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >Privacy Policy</a
-                >
-              </p>
-            </label>
+            <label class="custom-label-user-checkbox" for="user-privacy">
+              <span class="custom-checkbox"
+                ><svg class="" width="10" height="8">
+                  <use href="./images/icons.svg#icon-gall"></use></svg></span
+              >I accept the terms and conditions of the
+              <a href="#" class="privacy-policy">Privacy Policy</a></label
+            >
           </div>
 
           <button class="modal-btn" type="submit">Send</button>
