--- a/index.html
+++ b/index.html
@@ -52,12 +52,87 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="menu-open-btn">
+          <svg class="header-icon" width="18" height="16">
+            <use href="./images/icons.svg#header-icon"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mob-menu is-open">
+        <div class="container mob-menu-cont">
+          <button type="button" class="menu-close-btn">
+            <svg class="header-menu-icon" width="8" height="8">
+              <use href="./images/icons.svg#icon-close-x"></use>
+            </svg>
+          </button>
+          <nav class="mob-nav">
+            <ul class="mob-menu-list">
+              <li class="mob-menu-item">
+                <a class="mob-menu-link current" href="./index.html">Studio</a>
+              </li>
+              <li class="mob-menu-item">
+                <a class="mob-menu-link" href="">Portfolio</a>
+              </li>
+              <li class="mob-menu-item">
+                <a class="mob-menu-link" href="">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="mob-address">
+            <ul class="mob-contacts-menu">
+              <li class="mob-contacts-menu-item">
+                <a
+                  class="mob-contacts-menu-link"
+                  href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="mob-contacts-menu-item">
+                <a class="mob-contacts-menu-link" href="tel:+110001111111"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+          <div class="mob-contacts-soc-cont">
+            <ul class="mob-list-contacts">
+              <li class="mob-list-contacts-item">
+                <a class="mob-list-contacts-link" target="_blank" href="">
+                  <svg class="mob-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-list-contacts-item">
+                <a class="mob-list-contacts-link" target="_blank" href="">
+                  <svg class="mob-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-list-contacts-item">
+                <a class="mob-list-contacts-link" target="_blank" href="">
+                  <svg class="mob-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="mob-list-contacts-item">
+                <a class="mob-list-contacts-link" target="_blank" href="">
+                  <svg class="mob-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </header>
     <main>
       <!-- #region hero -->
       <section class="hero">
-        <div class="container">
+        <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button">Order Service</button>
         </div>
@@ -128,6 +203,10 @@
             <li class="team-list-item">
               <img
                 class="team-img"
+                srcset="
+                  ./images/mark-guerrero.jpg   1x,
+                  ./images/mark-guerrero2x.jpg 2x
+                "
                 src="./images/mark-guerrero.jpg"
                 alt="mark-guerrero"
                 width="264"
@@ -169,6 +248,7 @@
             <li class="team-list-item">
               <img
                 class="team-img"
+                srcset="./images/tom-ford.jpg 1x, ./images/tom-ford2x.jpg 2x"
                 src="./images/tom-ford.jpg"
                 alt="tom-ford"
                 width="264"
@@ -210,6 +290,10 @@
             <li class="team-list-item">
               <img
                 class="team-img"
+                srcset="
+                  ./images/camila-garcia.jpg   1x,
+                  ./images/camila-garcia2x.jpg 2x
+                "
                 src="./images/camila-garcia.jpg"
                 alt="camila-garcia"
                 width="264"
@@ -251,6 +335,10 @@
             <li class="team-list-item">
               <img
                 class="team-img"
+                srcset="
+                  ./images/daniel-wilson.jpg   1x,
+                  ./images/daniel-wilson2x.jpg 2x
+                "
                 src="./images/daniel-wilson.jpg"
                 alt="daniel-wilson"
                 width="264"
@@ -301,13 +389,31 @@
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
               <div class="thumb">
-                <img
-                  class="portfolio-img"
-                  src="./images/Portfolio/banking-app.jpg"
-                  alt="banking-app"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/tablet/banking-app-tab.jpg   1x,
+                      ./images/tablet/banking-app-tab2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/banking-app.jpg   1x,
+                      ./images/portfolio/banking-app2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <img
+                    srcset="
+                      ./images/mobile/banking-app-mob.jpg   1x,
+                      ./images/mobile/banking-app-mob2x.jpg 2x
+                    "
+                    src="./images/mobile/banking-app-mob.jpg"
+                    alt="Banking App"
+                    width="360"
+                  />
+                </picture>
                 <p class="portfolio-overflow">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -321,13 +427,31 @@
             </li>
             <li class="portfolio-list-item">
               <div class="thumb">
-                <img
-                  class="portfolio-img"
-                  src="./images/Portfolio/cashless-payment.jpg"
-                  alt="cashless-payment"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/tablet/cashless-payment-tab.jpg   1x,
+                      ./images/tablet/cashless-payment-tab2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/cashless-payment.jpg   1x,
+                      ./images/portfolio/cashless-payment2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <img
+                    srcset="
+                      ./images/mobile/cashless-payment-mob.jpg   1x,
+                      ./images/mobile/cashless-payment-mob2x.jpg 2x
+                    "
+                    src="./images/mobile/cashless-payment-mob.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                  />
+                </picture>
                 <p class="portfolio-overflow">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -341,13 +465,31 @@
             </li>
             <li class="portfolio-list-item">
               <div class="thumb">
-                <img
-                  class="portfolio-img"
-                  src="./images/Portfolio/meditation-app.jpg"
-                  alt="meditation-app"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/tablet/meditation-app-tab.jpg   1x,
+                      ./images/tablet/meditation-app-tab2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/meditation-app.jpg   1x,
+                      ./images/portfolio/meditation-app2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <img
+                    srcset="
+                      ./images/mobile/meditation-app-mob.jpg   1x,
+                      ./images/mobile/meditation-app-mob2x.jpg 2x
+                    "
+                    src="./images/meditationapp-mob.jpg"
+                    alt="Meditation App"
+                    width="360"
+                  />
+                </picture>
                 <p class="portfolio-overflow">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -361,13 +503,31 @@
             </li>
             <li class="portfolio-list-item">
               <div class="thumb">
-                <img
-                  class="portfolio-img"
-                  src="./images/Portfolio/taxi-service.jpg"
-                  alt="taxi-service"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/tablet/taxi-service-tab.jpg   1x,
+                      ./images/tablet/taxi-service-tab2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/taxi-service.jpg   1x,
+                      ./images/portfolio/taxi-service2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <img
+                    srcset="
+                      ./images/mobile/taxi-service-mob.jpg   1x,
+                      ./images/mobile/taxi-service-mob2x.jpg 2x
+                    "
+                    src="./images/mobile/taxi-service-mob.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                  />
+                </picture>
                 <p class="portfolio-overflow">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -381,13 +541,31 @@
             </li>
             <li class="portfolio-list-item">
               <div class="thumb">
-                <img
-                  class="portfolio-img"
-                  src="./images/Portfolio/screen-illustr.jpg"
-                  alt="screen-illustr"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/tablet/screen-illustr-tab.jpg   1x,
+                      ./images/tablet/screen-illustr-tab2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/screen-illustr.jpg   1x,
+                      ./images/portfolio/screen-illustr2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <img
+                    srcset="
+                      ./images/mobile/screen-illustr-mob.jpg   1x,
+                      ./images/mobile/screen-illustr-mob2x.jpg 2x
+                    "
+                    src="./images/mobile/screen-illustr-mob.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                  />
+                </picture>
                 <p class="portfolio-overflow">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -401,13 +579,32 @@
             </li>
             <li class="portfolio-list-item">
               <div class="thumb">
-                <img
-                  class="portfolio-img"
-                  src="./images/Portfolio/online-courses.jpg"
-                  alt="online-courses"
-                  width="360"
-                  height="300"
-                />
+                <picture>
+                  <source
+                    srcset="
+                      ./images/tablet/online-courses-tab.jpg   1x,
+                      ./images/tablet/online-courses-tab2x.jpg 2x
+                    "
+                    media="(min-width: 768px)"
+                  />
+                  <source
+                    srcset="
+                      ./images/portfolio/online-courses.jpg   1x,
+                      ./images/portfolio/online-courses2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)"
+                  />
+                  <img
+                    srcset="
+                      ./images/mobile/online-courses-mob.jpg   1x,
+                      ./images/mobile/online-courses-mob2x.jpg 2x
+                    "
+                    src="./images/mobile/online-courses-mob.jpg"
+                    alt="Online Courses"
+                    width="360"
+                  />
+                </picture>
+
                 <p class="portfolio-overflow">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
